# IM-socket-qt-qml

./: README.md
client/: ChatItem.qml  ContactList.qml  ContactPage.qml  ContactTrend.qml  ConversationPage.qml  Custominformationmodel.cpp  Custominformationmodel.h  FriendItem.qml  IM.pro  ItemDesign.qml  Login.qml  MyWorkerThread.cpp  MyWorkerThread.h  TalkLabel.qml  TalkListView.qml  buffer.cpp  buffer.h  contactmodel.cpp  contactmodel.h  custominfomodel.cpp  custominfomodel.h  custominfomodel.qmodel  custominformationmodel.cpp  custominformationmodel.h  custommesmodel.cpp  custommesmodel.h  custommessagemodel.cpp  custommessagemodel.h  custommodel.cpp  custommodel.h  loginmanager.cpp  loginmanager.h  main.cpp  main.qml  qml.qrc  qsqlquerymodel.cpp  qsqlquerymodel.h  socket.cpp  socket.h  sqlconversationmodel.cpp  (+3 more)
server/: CMakeLists.txt  app
server/include/: Acceptor.h  Buffer.h  Channel.h  Connection.h  Epoll.h  EventLoop.h  Mysql.h  Server.h  Socket.h  ThreadPool.h
server/src/: Acceptor.cpp  Buffer.cpp  Channel.cpp  Connection.cpp  Epoll.cpp  EventLoop.cpp  Mysql.cpp  Server.cpp  Socket.cpp  ThreadPool.cpp
server/test/: ThreadPoolTest.cpp  client.cpp  mysqlTest.cpp  server.cpp  testServerClient.cpp
